[metadata]
author = Brent Barbachem
author_email = "barbacbd@dukes.jmu.edu"
maintainer = Brent Barbachem
maintainer_email = "barbacbd@dukes.jmu.edu"
name = nautical
version = 2.5.2
description = 'The nautical package provides users with access to historical and real time nautical information.'
long_description = file: README.md
long_description_content_type = 'text/markdown'
keywords = nautical, noaa, ncei, ocean, water
license = 'MIT'
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
download_url = "https://pypi.org/project/nautical/"
url = "https://github.com/barbacbd/nautical"

[options]
zip_safe = False
include_package_data = True
packages = find: 
install_requires =
    bs4
    pykml
    pyYAML
    requests
    haversine
tests_require =
    pytest
    coverage
    pytest-cov
    mock
    prospector
python_requires = >=3.6, <4

[options.package_data]
* = *.yaml

[options.packages.find]
exclude =
    scripts*
    tests*
    user*