[metadata]
author = Brent Barbachem
author_email = barbacbd@gmail.com
maintainer = Brent Barbachem
maintainer_email = barbacbd@gmail.com
name = nautical
version = attr: nautical.release.__version__
description = The nautical package provides users with access to historical and real time nautical information.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nautical, noaa, ncei, ocean, water
license = MIT
license_files = file: LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: Freeware
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
url = https://github.com/barbacbd/nautical

[options]
zip_safe = False
include_package_data = True
packages = find: 
install_requires =
    appdirs
    bs4
    pykml
    pyYAML
    requests
    haversine
tests_require =
    pytest
    coverage
    pytest-cov
    mock
    pylint
    pytest-order
python_requires = >=3.6, <4

[options.package_data]
* = *.yaml

[options.packages.find]
exclude =
    scripts*
    tests*
    user*
